fixing svg fullscreen cutoff issue on desktop safari

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -598,91 +598,98 @@ from - https://css-tricks.com/styling-cross-browser-compatible-range-inputs-css/
 *
  /* slider styles */
  input[type=range] {
-	-webkit-appearance: none;
-	margin: 18px 0;
-	width: 100%;
-  }
-  input[type=range]:focus {
-	outline: none;
-  }
-  input[type=range]::-webkit-slider-runnable-track {
-	width: 100%;
-	height: 8.4px;
-	cursor: pointer;
-	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-	background: lightgray;
-	border-radius: 1.3px;
-	border: 0.2px solid darkgray;
-  }
-  input[type=range]::-webkit-slider-thumb {
-	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-	border: 1px solid darkgray;
-	height: 36px;
-	width: 16px;
-	border-radius: 0px;
-	background: lightgray;
-	cursor: pointer;
-	-webkit-appearance: none;
-	margin-top: -14px;
-  }
-  input[type=range]:focus::-webkit-slider-runnable-track {
-	background: lightgray;
-  }
-  input[type=range]::-moz-range-track {
-	width: 100%;
-	height: 8.4px;
-	cursor: pointer;
-	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-	background: lightgray;
-	border-radius: 1.3px;
-	border: 0.2px solid darkgray;
-  }
-  input[type=range]::-moz-range-thumb {
-	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-	border: 1px solid darkgray;
-	height: 36px;
-	width: 16px;
-	border-radius: 3px;
-	background: lightgray;
-	cursor: pointer;
-  }
-  input[type=range]::-ms-track {
-	width: 100%;
-	height: 8.4px;
-	cursor: pointer;
-	background: transparent;
-	border-color: transparent;
-	border-width: 16px 0;
-	color: transparent;
-  }
-  input[type=range]::-ms-fill-lower {
-	background: lightgray;
-	border: 0.2px solid darkgray;
-	border-radius: 2.6px;
-	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  }
-  input[type=range]::-ms-fill-upper {
-	background: lightgray;
-	border: 0.2px solid darkgray;
-	border-radius: 2.6px;
-	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  }
-  input[type=range]::-ms-thumb {
-	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-	border: 1px solid darkgray;
-	height: 36px;
-	width: 16px;
-	border-radius: 3px;
-	background: lightgray;
-	cursor: pointer;
-  }
-  input[type=range]:focus::-ms-fill-lower {
-	background: lightgray;
-  }
-  input[type=range]:focus::-ms-fill-upper {
-	background: lightgray;
-  }
-  #installation {
+-webkit-appearance: none;
+margin: 18px 0;
+width: 100%;
+}
+input[type=range]:focus {
+outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+width: 100%;
+height: 8.4px;
+cursor: pointer;
+box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+background: lightgray;
+border-radius: 1.3px;
+border: 0.2px solid darkgray;
+}
+input[type=range]::-webkit-slider-thumb {
+box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+border: 1px solid darkgray;
+height: 36px;
+width: 16px;
+border-radius: 0px;
+background: lightgray;
+cursor: pointer;
+-webkit-appearance: none;
+margin-top: -14px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+background: lightgray;
+}
+input[type=range]::-moz-range-track {
+width: 100%;
+height: 8.4px;
+cursor: pointer;
+box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+background: lightgray;
+border-radius: 1.3px;
+border: 0.2px solid darkgray;
+}
+input[type=range]::-moz-range-thumb {
+box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+border: 1px solid darkgray;
+height: 36px;
+width: 16px;
+border-radius: 3px;
+background: lightgray;
+cursor: pointer;
+}
+input[type=range]::-ms-track {
+width: 100%;
+height: 8.4px;
+cursor: pointer;
+background: transparent;
+border-color: transparent;
+border-width: 16px 0;
+color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+background: lightgray;
+border: 0.2px solid darkgray;
+border-radius: 2.6px;
+box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type=range]::-ms-fill-upper {
+background: lightgray;
+border: 0.2px solid darkgray;
+border-radius: 2.6px;
+box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type=range]::-ms-thumb {
+box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+border: 1px solid darkgray;
+height: 36px;
+width: 16px;
+border-radius: 3px;
+background: lightgray;
+cursor: pointer;
+}
+input[type=range]:focus::-ms-fill-lower {
+background: lightgray;
+}
+input[type=range]:focus::-ms-fill-upper {
+background: lightgray;
+}
+
+
+/*installation fullscreen hacks*/
+#installation {
+    width: 100%;
+    height: 100%;
+}
+#installation-svg {
     width: 100%;
     height: 100%;
 }
